Update AboutMe styles for mobile layout to improve responsiveness: Fixed the gap between 2 sections

--- a/src/app/(home)/AboutMe/aboutMe.module.scss
+++ b/src/app/(home)/AboutMe/aboutMe.module.scss
@@ -16,7 +16,8 @@
   @include mobile {
     justify-content: center;
     grid-template-columns: 1fr;
-    grid-template-rows: 2fr 10% 3fr;
+    grid-template-rows: auto auto auto;
+    gap: 0;
   }
 
   &__ahead {
@@ -187,6 +188,7 @@
       grid-column: 1/2;
       grid-row: 2/3;
       width: 100%;
+      height: 15vh;
     }
   }
 
@@ -207,6 +209,7 @@
     @include mobile {
       grid-column: auto;
       grid-row: 3/4;
+      margin-top: 0;
     }
   }
 }
